2010-12-02
* Removed most of the command-line interface leaving only the video
  options. sz81 now manages the CLI which makes parseoptions redundant.
* Added support for a platform dependent local data directory which is
  currently used to locate the permanently operational ZX printer file.
* Completely reorganised main in smain.c. Since configuring sz81 via
  the CLI is now redundant, sz81 is initialised before the emulator so
  that the emulator will now initialise using rcfile data.

2010-11-25
* Added support for assembling pipepanic and mctemplate using Pasmo.
* Added ZX80 ROM source code recreated from disassembling the binary.

2010-11-24
* Conventionalised and tweaked the build system a little more.
* Reorganised the newly added Open81 content in preparation for the
  soon to be included Open80 content.

2010-07-15 Thunor <thunorsif_at_hotmail.com>
* Both the mctemplate and PipePanic game are complete.

2010-05-11 Thunor <thunorsif_at_hotmail.com>
* Added a ZX81 machine code template and a pipe connecting game which
  is still under development.

2010-05-06 Thunor <thunorsif_at_hotmail.com>
* Tweaked GPH GP2X Wiz support.

2010-05-04 Thunor <thunorsif_at_hotmail.com>
* Added support for the GPH GP2X Wiz.

2010-04-30 Thunor <thunorsif_at_hotmail.com>
* Changed the way sdl_rcfile_read() manages reading ctrl_remaps: If one
  or more ctrl_remaps were read then they will completely replace the
  existing default ctrl_remaps, and if none were read then the defaults
  will remain.

2010-04-28 Thunor <thunorsif_at_hotmail.com>
* Added fullscreen, xres and yres command line options.
* Added keyboard page up and page down to the load selector.

2010-04-27 Thunor <thunorsif_at_hotmail.com>
* Version 2.1.6.1 released
* Fixed a few issues with the joystick configurator.

2010-04-26 Thunor <thunorsif_at_hotmail.com>
* Version 2.1.6 released
* Added an alternative keyboard based control remapper (F9) for users
  with single buttoned joysticks.
